<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chakras"
    android:id="@+id/parentLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <TextView
        android:id="@+id/tv_restartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/restar_timer_label"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32dp" />
        
    <TextView
        android:id="@+id/tv_elapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/tv_restartLabel"
        android:layout_centerHorizontal="true"
        android:text="Time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

   <LinearLayout
       android:id="@+id/layout_spinner"
       android:layout_below="@id/tv_elapsedTime"
        android:layout_width="fill_parent"
       android:layout_height="wrap_content"
      android:layout_marginLeft="20sp"
       android:orientation="horizontal">

    <Spinner
        android:id="@+id/spn_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:layout_marginLeft="20dp"
        android:textSize="30sp" 
        android:prompt="@string/selecTime" />

    <TextView
        android:layout_width="0dp"
        android:id="@+id/tv_labelMin"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:textSize="20sp"
         android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:text="Min" />

        <Spinner
            android:id="@+id/spn_sec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
             android:layout_marginLeft="10dp"
            android:textSize="30sp" />

        <TextView
            android:layout_width="0dp"
              android:id="@+id/tv_labelSec"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
        android:textSize="20sp"
         android:layout_marginLeft="10dp"
        android:textStyle="bold"
            android:text="Sec" />

    </LinearLayout>

<LinearLayout
    android:id="@+id/btn_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:weightSum="2" >

    <FrameLayout
        android:id="@+id/frame_start_pause_restart_container"
        android:layout_width="0dp"
        android:layout_weight="1"
       android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnStart"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="fill_parent"
            android:text="@string/btnPause"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="fill_parent"
            android:text="@string/btnresume"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </FrameLayout>
    <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btnStop"
            android:layout_height="wrap_content"
            android:visibility="visible" />
</LinearLayout>
 <!-- for inmobi -->

    <LinearLayout
        android:id="@+id/bannerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/btn_container"
        android:layout_alignParentBottom="true" >

         <com.inmobi.monetization.IMBanner
            android:id="@+id/banner"
            android:layout_width="320dp"
            android:layout_height="50dp"
            adSize="15"
            appId="@string/appId" />

    </LinearLayout>
</RelativeLayout>